# adventofcode

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .pdm-python  .pre-commit-config.yaml  .pylintrc  Brewfile  CHANGELOG.md  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  renovate.json  requirements.txt  sonar-project.properties
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docker-image.yml  publish-docker.yml  pylint.yml  readme-stars.yml  release-drafter.yml  tag-build.yml  test.yml
2015/: day1_1.py  day1_2.py
2021/: day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day13.py  day1_1.py  day1_2.py  day2_1.py  day2_2.py  day3_1.py  day3_2.py  day4.py
aoc/: __init__.py
aoc/parsers/: grid.py
aoc/visualisations/: Kivy.py  Numpy.py  PyGame.py  pygame.py
aoc/year2015/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py
aoc/year2021/: __init__.py  day04.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day13.py  day1_1.py  day1_2.py  day2_1.py  day2_2.py  day3_1.py  day3_2.py
aoc/year2022/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py
aoc/year2023/: __init__.py  day01.py  day02.py  day04.py  day05.py  day06.py  day07.py  day08.py
aoc/year2024/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py
aoc/year2025/: day01.py  day02.py
src/aoc/visualisations/: Kivy.py  PyGame.py
src/aoc/year2015/: day02.py  day04.py
src/aoc/year2021/: day01.py  day02.py  day03.py  day04.py  day06.py  day08.py  day2_1.py  day2_2.py  day3_1.py  day3_2.py
src/aoc/year2022/: day03.py  day04.py  day05.py  day06.py  day08.py
src/aoc/year2023/: day04.py  day07.py
src/aoc/year2024/: day02.py  day03.py
tests/: conftest.py  test_aoc.py
tests/year2015/: day01.yml  day02.yml  day03.yml  day04.yml  day05.yml  day06.yml
tests/year2021/: day01.yml  day02.yml  day03.yml  day04.yml  day06.yml  day07.yml  day08.yml  day09.yml  day10.yml  day11.yml  day13.yml
tests/year2022/: day01.yml  day02.yml  day03.yml  day04.yml  day05.yml  day06.yml  day07.yml  day08.yml  day09.yml  day10.yml  test_simple.py
tests/year2023/: day01.yml  day02.yml  day04.yml  day05.yml  day06.yml  day07.yml  day08.yml
tests/year2024/: day01.yml  day02.yml  day03.yml  day04.yml  day05.yml  day06.yml
tests/year2025/: day01.yml  day02.yml
