[build-system]
    build-backend = "hatchling.build"
    requires      = ["hatchling"]

[dependency-groups]
    ci = ["pytest-github-actions-annotate-failures"]
    dev = [
        "deptry>=0.19.0",
        "pre-commit>=3.8.0",
        "python-semantic-release>=9.8.7",
        "ruff>=0.5.7",
        "ty>=0.0.13",
        "types-pyyaml>=6.0.12.20240808",
    ]
    test = [
        "pytest-cov>=6.1.1",
        "pytest-randomly>=3.16.0",
        "pytest-timeout>=2.4.0",
        "pytest-xdist>=3.7.0",
    ]

[project]
    authors = [{ name = "Paul Saunders", email = "darac+github@darac.org.uk" }]
    classifiers = [
        "Programming Language :: Python :: 3",
        "Topic :: Games/Entertainment :: Puzzle Games",
    ]
    dependencies = [
        "advent-of-code-data>=2.0.1",
        "kivy[base]>=2.3.0",
        "numpy>=2.1.3",
        "pandas>=2.2.2",
        "parse>=1.20.2",
        "pygame-ce>=2.5.6",
        "rich>=13.7.1",
    ]
    description = "darac's solutions for http://adventofcode.com"
    name = "aoc"
    readme = "README.md"
    # It's common to not specify an upper bound,
    # but some of the dependencies are slow to update,
    # so we limit here until they update.
    requires-python = "<3.15,>=3.12"
    version         = "2025.5.0"

    [project.entry-points."adventofcode.user"]
        darac_aoc = "aoc:solve"

[tool.black]
    line-length    = 76
    target-version = ["py312"]

[tool.coverage.html]
    directory = "htmlcov"

[tool.coverage.paths]
    source = ["*/site-packages", "src/aoc"]

[tool.coverage.report]
    exclude_lines = [
        "def __repr__",
        "if 0:",
        "if __name__ == .__main__.:",
        "if self.debug",
        "if settings.DEBUG:",
        "pragma: no cover",
        "raise AssertionError",
        "raise NotImplementedError",
    ]
    fail_under = 80
    show_missing = true

[tool.coverage.run]
    branch         = true
    omit           = ["src/aoc/__init__.py", "src/aoc/visualisations/*"]
    relative_files = true
    source         = ["src/aoc"]

[tool.hatch.build.targets.wheel]
    packages = ["src/aoc"]

[tool.mypy]
    files                  = ["src/aoc/"]
    ignore_missing_imports = true
    warn_return_any        = true
    warn_unused_configs    = true

[tool.pixi.dependencies]
    kivy = ">=2.3.1,<3"

[tool.pixi.environments]
    ci      = { features = ["py312", "ci", "test"] }
    default = { features = ["py312"] }
    dev     = { features = ["py312", "dev", "test"] }
    py312   = { features = ["py312", "test"] }
    py313   = { features = ["py313", "test"] }
    py314   = { features = ["py314", "test"] }

[tool.pixi.feature.ci.pypi-dependencies]
    pytest-github-actions-annotate-failures = ">=0"

[tool.pixi.feature.dev.pypi-dependencies]
    deptry                  = ">=0.19.0"
    pre-commit              = ">=3.8.0"
    python-semantic-release = ">=9.8.7"
    ruff                    = ">=0.5.7"
    ty                      = ">=0.0.13"
    types-pyyaml            = ">=6.0.12.20240808"

[tool.pixi.feature.py312.dependencies]
    python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
    python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
    python = "3.14.*"

[tool.pixi.feature.test.pypi-dependencies]
    pytest          = ">=8"
    pytest-cov      = ">=6.1.1"
    pytest-randomly = ">=3.16.0"
    pytest-sugar    = ">=0.9.4"
    pytest-timeout  = ">=2.4.0"
    pytest-xdist    = ">=3.7.0"
    pyyaml          = "*"

[tool.pixi.pypi-dependencies]
    aoc   = { path = ".", editable = true }
    build = "*"

[tool.pixi.tasks]
    build   = "python -m build"
    ci-lint = "ruff check src/aoc --output-format json --output-file ruff.json"
    ci-test = "pytest -vv"
    lint    = "ruff check src/aoc tests && ty check src/aoc tests"
    test    = "pytest"

    test-all = """
pixi run lint &&
pixi run --environment py312 test &&
pixi run --environment py313 test &&
pixi run --environment py314 test
"""

[tool.pixi.workspace]
    channels  = ["https://prefix.dev/conda-forge"]
    platforms = ["linux-64", "osx-64", "win-64"]

[tool.pyright]
    exclude = [
        "**/__pycache__",
        ".pytest_cache",
        ".ruff_cache",
        ".venv",
        "**/node_modules",
        "**/.*",
    ]
    pythonPlatform = "All"
    pythonVersion = "3.12"

[tool.pytest.ini_options]
    addopts = """\
    --cov \
    --cov-report=xml:coverage.xml \
    --junit-xml=junit.xml \
    --tb=auto \
    --timeout=300 \
    """
    junit_suite_name = "aoc"
    pythonpath = ["src/"]

[tool.ruff]
    # The AOC website wraps at 76 chars, so should we.
    line-length = 76
    lint.ignore = [
        "C901",
        "COM812", # Allow ruff formatter
        "D",      # Skip docstrings
        "FBT",    # Allow boolean parameters
        "ISC001", # Allow ruff formatter
        "N818",   # Don't want to have to call exceptions *Error
        "PLR",
        "S101",   # Of course we want to use assert
        "T201",   # Allow use of `print`
    ]
    lint.select = ["ALL"]
    target-version = "py312"

[tool.semantic_release]
    build_command     = "pixi run build"
    version_toml      = ["pyproject.toml:project.version"]
    version_variables = ["src/aoc/__init__.py:__version__"]

    [tool.semantic_release.changelog.environment]
        autoescape = true

[tool.sonar]
    coverage.exclusions         = "src/aoc/visualisations/**,**/__init__.py"
    links.homepage              = "https://github.com/darac/adventofcode/"
    organization                = "darac"
    projectKey                  = "darac_adventofcode"
    python.coverage.reportPaths = "coverage*.xml"
    python.ruff.reportPaths     = "ruff.json"
    python.version              = "3.12"
    python.xunit.reportPath     = "junit*.xml"
    python.xunit.skipDetails    = true
    sources                     = "src/"
    tests                       = "tests/"
